trunk/NewArchive/797010dbfd011c3b5055eca6b052139a-e97d505fa51ad5c14449c9207511deef/output
main.cpp: In instantiation of ‘T test(T) [with T = int]’:
main.cpp:11:11:   required from here
main.cpp:5:5: error: static assertion failed: Test shall be called with a floating point datatype
     static_assert(std::is_floating_point<T>::value, "Test shall be called with a floating point datatype");
     ^
